# ook

./: .git-blame-ignore-revs  .gitignore  .pylintrc  author-metadata.py  clean.py  copy.sh  gr-update.py  lint.py  metadata.py  ook  owned.py  pyproject.toml  reading.py  scrape.py  setup.cfg  suggestions.py  update  update.py  wordcount.py  wordcounts.py
benchmarks/: conftest.py  perf_collection.py  perf_config.py  perf_ook.py  perf_storage.py  pytest.ini
old/: wordcount.py
reading/: __init__.py  _entity.py  _grtree.py  author.py  book.py  cache.py  chain.py  cmds.py  collection.py  compare.py  config.py  ebooks.py  gdocs.py  goodreads.py  graph.py  lint.py  metadata.py  reports.py  scheduling.py  scrape.py  series.py  storage.py  suggestions.py  update.py  wikidata.py  wordcounts.py
t/: conftest.py  test_chain.py  test_cmds.py  test_collection.py  test_compare.py  test_config.py  test_gdocs.py  test_goodreads.py  test_graph.py  test_make_books.py  test_metadata.py  test_newcollection.py  test_reading_cmds.py  test_reading_collection.py  test_reading_compare.py  test_reading_config.py  test_reading_gdocs.py  test_reading_goodreads.py  test_reading_metadata.py  test_reading_scheduling.py  test_reading_series.py  test_reading_storage.py  test_reading_wikidata.py  test_reading_wordcounts.py  test_scheduling.py  test_series.py  test_storage.py  test_wikidata.py  test_wordcounts.py
tests/: test_reading_collection.py  test_reading_compare.py  test_reading_goodreads.py  test_reading_metadata.py  test_reading_scheduling.py  test_reading_series.py
tools/: make-books.py  (+1 more)
(+64 files in other folders)
