[project]
requires-python = ">=3.9"


[tool.black]
line-length = 100
quiet = true


[tool.pytest.ini_options]
testpaths = 't/'
pythonpath = '.'


[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
	"W",
	"I",
	"YTT",
	"A",
	"C4",
	"T10",
	"EXE",
	"FA",
	"ISC",
	"ICN",
	"LOG",
	"G",
	"PIE",
	"PYI",
	"PT",
	"Q",
	"RSE",
	"SLOT",
	"TID",
	"INT",
	# Pylint. FIXME condense these all into "PL"
	"PLC", "PLE",
	"FLY",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
lines-after-imports = 2

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "csv"
parametrize-values-type = "tuple"
